<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e6d4d4"
    tools:context="com.example.neeraj.bloodbank.DonarRegistrationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:background="@drawable/login_background"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="@dimen/small"
            android:text="@string/user_registration"
            android:textColor="#000000"
            android:textSize="@dimen/extralarge" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"

            android:orientation="vertical">

            <EditText
                android:id="@+id/d_reg_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small"
                android:gravity="center"
                android:hint="@string/reg_name"
                android:maxLength="15"
                android:padding="@dimen/padding_medium"
                android:singleLine="true"
                android:textColorHint="#592c02"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/d_reg_emailid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small"
                android:gravity="center"
                android:hint="Enter Email ID"
                android:inputType="textEmailAddress"
                android:maxLength="30"
                android:padding="@dimen/padding_medium"
                android:singleLine="true"
                android:textColorHint="#592c02"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/d_reg_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small"
                android:gravity="center"
                android:hint="@string/reg_contact_number"
                android:inputType="phone"
                android:maxLength="10"
                android:padding="@dimen/padding_medium"
                android:singleLine="true"
                android:textColorHint="#592c02"
                android:textSize="20dp" />

            <!-- <EditText
                android:id="@+id/d_reg_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small"
                android:gravity="center"
                android:hint="@string/reg_password"
                android:maxLength="20"
                android:inputType="textVisiblePassword"
                android:padding="@dimen/padding_medium"
                android:singleLine="true"
                android:textColorHint="#592c02"
                android:textSize="@dimen/medium" />-->

            <Spinner
                android:id="@+id/d_reg_state"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small"
                android:gravity="center"
                android:padding="@dimen/spinner_height_medium"
                android:prompt="@string/reg_state"
                android:textColor="#592c02" />

            <EditText
                android:id="@+id/d_reg_pincode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small"
                android:gravity="center"
                android:hint="@string/reg_pincode"
                android:inputType="number"
                android:maxLength="6"
                android:padding="@dimen/padding_medium"
                android:singleLine="true"
                android:textColorHint="#592c02"
                android:textSize="20dp"

                />

            <Spinner
                android:id="@+id/d_reg_blood"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small"
                android:gravity="center"
                android:padding="@dimen/spinner_height_medium"
                android:textColor="#592c02" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioGroup
                android:layout_width="wrap_content"
                android:id="@+id/d_reg_radioGroupbtn"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/d_reg_radiobtn1"
                    android:text="@string/reg_male"
                    android:textSize="20dp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/d_reg_radiobtn2"
                    android:layout_weight="1"
                    android:text="@string/reg_female"
                    android:textSize="20dp" />


            </RadioGroup>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Authentication Details :"
            android:textSize="20dp"
            android:layout_gravity="center"
            />
        <EditText
            android:id="@+id/d_reg_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small"
            android:gravity="center"
            android:hint="Enter Username :"
            android:padding="@dimen/padding_medium"
            android:singleLine="true"
            android:textSize="20dp"
            android:textColorHint="#592c02"/>
        <EditText
            android:id="@+id/d_reg_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small"
            android:gravity="center"
            android:hint="Enter password :"
            android:padding="@dimen/padding_medium"
            android:inputType="textVisiblePassword"
            android:singleLine="true"
            android:textSize="20dp"
            android:textColorHint="#592c02"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="20dp"
        >

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/d_reg_donorcheck"
            android:layout_weight="1"
            android:textSize="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
           android:layout_toRightOf="@id/d_reg_donorcheck"
            android:layout_marginLeft="20dp"
            android:text="I want to be a donor"
            />

        </RelativeLayout>
        <Button
            android:id="@+id/reg_donor_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/medium"
            android:background="@drawable/buttonshape2"
            android:padding="@dimen/padding_large"
            android:text="@string/reg_submit"
            android:textSize="@dimen/large" />


    </LinearLayout>
</ScrollView>
